feat: add endpoint to update user avatar
